--- a/skin/frontend/rwd/default/scss/_var.scss
+++ b/skin/frontend/rwd/default/scss/_var.scss
@@ -91,7 +91,7 @@ $c-gray: #333333;
 // Text
 
 $c-text: #636363;
-$c-text-gray: #A0A0A0;
+$c-text-gray: #767676;
 $c-text-white: #E6E6E6;
 // Primary font color for headings and other non-link text
 $c-text-primary: $c-blue;
@@ -101,7 +101,7 @@ $c-text-primary: $c-blue;
 
 $c-action: $c-blue;
 $c-stimulus: darken($c-blue, 15%);
-$c-subtle: #A0A0A0;
+$c-subtle: #767676;
 
 // Notifications
 
